objects/butr__Test_Result__c.object
<CustomObject>
 <fullName>butr__Test_Result__c</fullName>
 <description>Detailed results of Apex classes, triggers and Selenium suites.</description>
 <fields>
  <fullName>butr__Code_Coverage_Result__c</fullName>
  <formula>IF (butr__Total_Lines__c = 0 &amp;&amp; butr__Lines_Covered__c = 0, "N/A",
  IF (butr__Total_Lines__c &gt; 0 &amp;&amp; butr__Code_Coverage__c &gt;= 0.75, "Pass", "Warning"
  )
)</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Code Coverage Result</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>butr__Code_Coverage__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Code Coverage</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>butr__Lines_Covered__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Lines Covered</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>butr__Result__c</fullName>
  <label>Result</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Pass</fullName>
    </value>
    <value>
     <fullName>Fail</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>butr__Test_Area__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Test Area</label>
  <referenceTo>butr__Test_Area__c</referenceTo>
  <relationshipLabel>Test Results</relationshipLabel>
  <relationshipName>Test_Results</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>butr__Test_Cycle_Result__c</fullName>
  <label>Test Cycle Result</label>
  <referenceTo>butr__Test_Cycle_Result__c</referenceTo>
  <relationshipName>Test_Script_Results</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>butr__Test_Script__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Test Script</label>
  <referenceTo>butr__Test_Script__c</referenceTo>
  <relationshipName>Test_Script_Results</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>butr__Total_Lines__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Total Lines</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>butr__Total_Tests__c</fullName>
  <inlineHelpText>The number of unit tests declared in the Apex class or test steps in a Selenium suite,</inlineHelpText>
  <label>Total Tests</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>butr__Total_Time__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Total Time</label>
  <precision>18</precision>
  <scale>3</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>butr__Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Apex</fullName>
    </value>
    <value>
     <fullName>Selenium</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <label>Test Result</label>
 <listViews>
  <fullName>butr__All</fullName>
  <columns>NAME</columns>
  <columns>butr__Result__c</columns>
  <columns>butr__Type__c</columns>
  <columns>CREATED_DATE</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>Test Result Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Test Results</pluralLabel>
 <recordTypes>
  <fullName>butr__Test_Area</fullName>
  <active>true</active>
  <description>Apex classes with only code (not test methods) and Apex triggers.</description>
  <label>Test Area</label>
 </recordTypes>
 <recordTypes>
  <fullName>butr__Test_Area_Script</fullName>
  <active>true</active>
  <description>Apex classes with code and test methods.</description>
  <label>Test Area/Script</label>
 </recordTypes>
 <recordTypes>
  <fullName>butr__Test_Script</fullName>
  <active>true</active>
  <description>Apex test classes with no code and only test methods.  Also includes Selenium scripts. with no code coverage.</description>
  <label>Test Script</label>
 </recordTypes>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>